crates/djls-python/tests/snapshots/corpus__packages__django-cms__cms__templatetags__cms_admin.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "cms.templatetags.cms_admin::tag::admin_static_url":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "cms.templatetags.cms_admin::tag::get_page_display_name":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: cms_page
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "cms.templatetags.cms_admin::tag::render_filter_field":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: request
        required: true
        kind: Variable
        position: 0
      - name: field
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
  "cms.templatetags.cms_admin::tag::show_admin_menu_for_pages":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: descendants
        required: true
        kind: Variable
        position: 0
      - name: depth
        required: false
        kind: Variable
        position: 1
    supports_as_var: true
  "cms.templatetags.cms_admin::tag::submit_row_plugin":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
filter_arities:
  "cms.templatetags.cms_admin::filter::boolean_icon":
    expects_arg: false
    arg_optional: false
  "cms.templatetags.cms_admin::filter::placeholder_is_immutable":
    expects_arg: true
    arg_optional: false
block_specs: {}
