crates/djls-python/tests/snapshots/corpus__packages__django-cms__cms__templatetags__cms_alias_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "cms.templatetags.cms_alias_tags::tag::render_alias_plugin":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: instance
        required: true
        kind: Variable
        position: 0
    as_var: strip
filter_arities: {}
block_specs: {}
