crates/djls-python/tests/snapshots/corpus__packages__django-cms__cms__templatetags__cms_js_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "cms.templatetags.cms_js_tags::tag::render_cms_structure_js":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: renderer
        required: true
        kind: Variable
        position: 0
      - name: obj
        required: true
        kind: Variable
        position: 1
    as_var: strip
  "cms.templatetags.cms_js_tags::tag::render_plugin_init_js":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: plugin
        required: true
        kind: Variable
        position: 0
    as_var: strip
filter_arities:
  "cms.templatetags.cms_js_tags::filter::bool":
    expects_arg: false
    arg_optional: false
  "cms.templatetags.cms_js_tags::filter::json":
    expects_arg: false
    arg_optional: false
block_specs: {}
